--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,30 +9,31 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 
 # --- Find Dependencies ---
-find_package(PkgConfig REQUIRED)
-pkg_check_modules(GLSLANG REQUIRED glslang)
-pkg_check_modules(SPIRV_TOOLS REQUIRED SPIRV-Tools)
+find_package(glslang REQUIRED)
+find_package(spirv_cross_core REQUIRED)
+find_package(spirv_cross_glsl REQUIRED)
+# The X11 library is required for the Android shim
+find_package(X11 REQUIRED)
 
 # --- Add Source Files ---
 # Use file(GLOB_RECURSE ...) to automatically find all source files.
 
 # C sources
 file(GLOB_RECURSE C_SOURCES
-    "main.c"            # <--- ADDED HERE
+    "main.c"
     "gl/core/*.c"
     "gl/shader/cache.c"
     "gles/*.c"
-    "glx/*.c"
+    "glx/glx.c"
     "util/*.c"
 )
 
-# C++ sources (our new translator)
+# C++ sources
 file(GLOB_RECURSE CXX_SOURCES
     "gl/shader/translate.cpp"
 )
 
 # --- Define the Shared Library Target ---
-# This creates the libglt.so target from all C and C++ sources
 add_library(glt SHARED ${C_SOURCES} ${CXX_SOURCES})
 
 # --- Target Properties and Includes ---
@@ -45,22 +46,26 @@ target_include_directories(glt PUBLIC
     "${CMAKE_CURRENT_SOURCE_DIR}/gl/core"
     "${CMAKE_CURRENT_SOURCE_DIR}/gl/shader"
     "${CMAKE_CURRENT_SOURCE_DIR}/util"
+    "${CMAKE_CURRENT_SOURCE_DIR}/glx"
 )
 
-# Add include directories found by pkg-config for glslang
-target_include_directories(glt PRIVATE ${GLSLANG_INCLUDE_DIRS})
+# Add include directories from dependencies
+target_include_directories(glt PRIVATE
+    ${GLSLANG_INCLUDE_DIRS}
+    ${SPIRV-Cross_INCLUDE_DIRS}
+)
 
-# Link against the libraries found by pkg-config
-# Also link against libdl for dlsym/dlopen if your constructor uses it.
+# Link against required libraries
 target_link_libraries(glt PRIVATE
-    ${GLSLANG_LIBRARIES}
-    ${SPIRV_TOOLS_LIBRARIES}
     dl
+    # Use modern imported targets if available, otherwise fall back to variables
+    glslang::glslang
     spirv-cross-core
     spirv-cross-glsl
+    ${X11_LIBRARIES} # Link against X11 for the shim
 )
 
-# Set compiler flags
+# Set common compiler flags
 target_compile_options(glt PRIVATE
     -fPIC
     -Wall
@@ -74,5 +79,3 @@ target_compile_options(glt PRIVATE
 message(STATUS "Configured glt shared library.")
 message(STATUS "  C sources: ${C_SOURCES}")
 message(STATUS "  C++ sources: ${CXX_SOURCES}")
-message(STATUS "  glslang includes: ${GLSLANG_INCLUDE_DIRS}")
-message(STATUS "  glslang libraries: ${GLSLANG_LIBRARIES}")
